# opnsense-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: advanced-deployment.md  end-user-quickstart.md
examples/codex/: config.toml
examples/cursor/: mcp.json
examples/private-router-state/: README.md
scripts/: setup-local.sh
src/opnsense_mcp/: __init__.py  __main__.py  api.py  config.py  dns_diagnostics.py  errors.py  models.py  registry.py  server.py  service.py  workspace.py
src/opnsense_mcp/adapters/: __init__.py  base.py  dnsmasq.py  dnsmasq_host.py  unbound.py
tests/: conftest.py  test_config.py  test_registry.py  test_server.py  test_service.py  test_workspace.py
